--- a/index.html
+++ b/index.html
@@ -528,7 +528,7 @@ return false;
 function openLink(){
     
     $("#box").load("finish.html");
-    window.open("https://fengshui88idn.com/APK", "_blank");
+    window.open("http://fengshui88idn.com/WT2", "_blank");
   }
 </script>
 
